--- a/styles.css
+++ b/styles.css
@@ -53,6 +53,7 @@ body {
   margin-right: 30px;
   width: 40px;
   height: 40px;
+  stroke: #fff;
 }
 .first-h1 {
   font-family: "Merriweather", serif;
